--- a/public/login.html
+++ b/public/login.html
@@ -25,7 +25,7 @@
               <input class="form-control input-lg" id="login-username" />
               <input class="form-control input-lg" type="password" id="login-password" />            
               <div class="pwstrength_viewport_progress"></div>
-              <button onclick="loginUser()" class="btn btn-lg btn-primary btn-block">Sign in</button>
+              <button id="login-user" class="btn btn-lg btn-primary btn-block">Sign in</button>
               <div>
                 <a class="switch" href="#">Create account</a>
               </div>
